widened victory div to avoid text outside on small screens

--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ h3{
   z-index             : 50;
 
   height              : 50%;
-  width               : 30%;
+  width               : 50%;
   padding             : 0.5em !important;
 
   background          : url('./art/menu.gif') no-repeat;
